Reorganised project into multiple modules